[gd_scene load_steps=12 format=3 uid="uid://dfj38b0k1omr3"]

[ext_resource type="Texture2D" uid="uid://qfaruyv2bkfh" path="res://assets/ui/icons/avatar_frame.png" id="1_6hk1d"]
[ext_resource type="Script" path="res://assets/ui/panel_logout/panel_logout.gd" id="1_d0lf5"]
[ext_resource type="FontFile" uid="uid://j5lmvns8gupg" path="res://assets/fonts/ttf/Poppins-Bold.ttf" id="2_skudw"]
[ext_resource type="FontFile" uid="uid://cs126ybekixv6" path="res://assets/fonts/ttf/Poppins-Medium.ttf" id="3_m3neb"]
[ext_resource type="FontFile" uid="uid://bqlmj2xwvkrst" path="res://assets/fonts/ttf/Poppins-SemiBold.ttf" id="4_fj725"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbrwf"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
shadow_color = Color(0.470588, 0.470588, 0.470588, 0.501961)
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7h1a7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n4ie2"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.470588, 0.470588, 0.470588, 0.501961)
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="Animation" id="Animation_2svp8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelLogout:offset_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [463]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelLogout:offset_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [276]
}

[sub_resource type="Animation" id="Animation_44vfk"]
resource_name = "show_panel_logout"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelLogout:offset_bottom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [463.0, -80.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PanelLogout:offset_top")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [276.0, -267.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tnrmj"]
_data = {
"RESET": SubResource("Animation_2svp8"),
"show_panel_logout": SubResource("Animation_44vfk")
}

[node name="panel_logout" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_d0lf5")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = -0.34082
anchor_right = 1.0
anchor_bottom = 1.25977
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.537255)
metadata/_edit_use_anchors_ = true

[node name="PanelLogout" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -225.0
offset_top = 276.0
offset_right = 225.0
offset_bottom = 463.0
grow_horizontal = 2
grow_vertical = 0

[node name="Panel" type="Panel" parent="PanelLogout"]
custom_minimum_size = Vector2(375, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tbrwf")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelLogout"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelLogout/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelLogout/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="PanelLogout/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="PanelLogout/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(52, 52)
layout_mode = 2

[node name="avatar" type="TextureRect" parent="PanelLogout/VBoxContainer/HBoxContainer2/MarginContainer3"]
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
mouse_filter = 2
expand_mode = 1
stretch_mode = 5

[node name="avatar2" type="TextureRect" parent="PanelLogout/VBoxContainer/HBoxContainer2/MarginContainer3"]
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_6hk1d")
expand_mode = 1
stretch_mode = 5

[node name="MarginContainer4" type="MarginContainer" parent="PanelLogout/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelLogout/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="player_name_logout" type="Label" parent="PanelLogout/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_skudw")
theme_override_font_sizes/font_size = 18
text = "..."

[node name="player_email_logout" type="Label" parent="PanelLogout/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.380392, 0.380392, 0.380392, 1)
theme_override_fonts/font = ExtResource("3_m3neb")
theme_override_font_sizes/font_size = 16
text = "..."
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelLogout/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="PanelLogout/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelLogout/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="PanelLogout/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="logout" type="Button" parent="PanelLogout/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_7h1a7")
flat = true

[node name="Panel" type="Panel" parent="PanelLogout/VBoxContainer/HBoxContainer/logout"]
custom_minimum_size = Vector2(375, 80)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n4ie2")

[node name="CenterContainer" type="CenterContainer" parent="PanelLogout/VBoxContainer/HBoxContainer/logout"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelLogout/VBoxContainer/HBoxContainer/logout/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="PanelLogout/VBoxContainer/HBoxContainer/logout/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="PanelLogout/VBoxContainer/HBoxContainer/logout/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_fj725")
theme_override_font_sizes/font_size = 16
text = "Logout"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MarginContainer5" type="MarginContainer" parent="PanelLogout/VBoxContainer/HBoxContainer/logout/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelLogout/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tnrmj")
}

[connection signal="gui_input" from="ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="pressed" from="PanelLogout/VBoxContainer/HBoxContainer/logout" to="." method="_on_logout_pressed"]
